# iced

./: Cargo.toml
examples/custom_widget/src/: main.rs
examples/direct_wgpu/: Cargo.toml  README.md
examples/direct_wgpu/src/: main.rs
examples/direct_wgpu/src/shader/: shader.wgsl
examples/geometry/src/: main.rs
examples/integration_wgpu/src/: main.rs
examples/styling/src/: main.rs
glow/src/: backend.rs  widget.rs
graphics/src/: backend.rs  layer.rs  primitive.rs  renderer.rs
graphics/src/widget/: canvas.rs  container.rs  qr_code.rs  text.rs  text_input.rs  tooltip.rs
graphics/src/widget/canvas/: cache.rs  frame.rs  geometry.rs
native/src/: element.rs  overlay.rs  program.rs  renderer.rs  user_interface.rs  widget.rs
native/src/layout/: flex.rs
native/src/overlay/: element.rs  menu.rs
native/src/program/: state.rs
native/src/renderer/: null.rs
native/src/widget/: button.rs  checkbox.rs  column.rs  container.rs  image.rs  pane_grid.rs  pick_list.rs  progress_bar.rs  radio.rs  row.rs  rule.rs  scrollable.rs  slider.rs  space.rs  svg.rs  text.rs  text_input.rs  toggler.rs  tooltip.rs
native/src/widget/image/: viewer.rs
native/src/widget/pane_grid/: content.rs  title_bar.rs
src/: widget.rs
style/src/: container.rs
web/src/widget/: text_input.rs
wgpu/src/: backend.rs  direct_wgpu.rs  lib.rs  widget.rs
wgpu/src/window/: compositor.rs
