[package]
name = "direct_wgpu"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
iced = { path = "../..", features = ["tokio"] }
iced_wgpu = { path = "../../wgpu" }
iced_native = { path = "../../native" }
iced_graphics = { path = "../../graphics" }
env_logger = "0.9"
bytemuck = "1.7"